--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ before_install:
 
 install:
   - pip install .
+  - cd && find -name gitfaces
 
 script:
-  - cd test && pytest --cov gitfaces
+  - cd test && GITFACES_REPO=~/nschloe/gitfaces pytest --cov gitfaces
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
