--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - pip install .
 
 script:
-  - export GITFACES_REPO=./build/nschloe/gitfaces && cd test && pytest --cov gitfaces
+  - export GITFACES_REPO=$HOME/build/nschloe/gitfaces && cd test && pytest --cov gitfaces
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
